Fix displaying too big avatars in edit avatar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,6 +85,10 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
     max-height: 22px;
 }
 
+.avatar-full {
+    max-height: 200px;
+}
+
 .raw-paste-data {
     min-height: 60px;
     height: 100px;
